@@ -3,7 +3,9 @@ AUX highlight-2.6.9-asneeded.patch 946 RMD160 f45810d93d5c7365e055fe5735c3f76d7a
 AUX highlight-2.6.9-gcc43.patch 492 RMD160 37c2907fd2b0f008175865980bdf1d966e23e803 SHA1 6cef4b90567229ad2b9041462736545e397fdbd2 SHA256 f75e28b9d8cf299ee7cf3fbd38db340343225a3badf950423810bf400da050a0
 DIST highlight-2.4.8.tar.bz2 315760 RMD160 a2623a2f5102fae1d9f5712a504876a55eda9c81 SHA1 091689fde96c9f4e3de75ea1b7c1838e8d25708c SHA256 e661b347222e5701930c697ff74c17ad8d65166bf34cb72b2041bb2e2e9c9aec
 DIST highlight-2.6.10.tar.bz2 397860 RMD160 20cfb4a142a4297da25e37e1b8a404bc9ea98376 SHA1 8b4fe442a7591ae9fe97a94ff6fc0930edc25e39 SHA256 2a47ba938e3eb06e6f11b503c216e5e732508feccf468215b8b44b75539cc2a1
+DIST highlight-2.6.12.tar.bz2 406711 RMD160 18c4be331d6fd00e09b86ea79ac9cdf842e81c69 SHA1 a3f58836a5ef5d84c4a6d3640db5f82797ab9bc0 SHA256 02827dcb0905677389c4fffd8fa61fc2fe7099094a10184c2f58a0fbcfb25682
 EBUILD highlight-2.4.8.ebuild 675 RMD160 76ac9ad6ad1e4e0094cad3fbbec2f6c9dba63f99 SHA1 b7bd740035f3b64c2e293d79b1908d1b349380c1 SHA256 71b708fdf3bca97ebc9ee0c9ea27d1ed618d52071583f585a19d68ee4a8e406b
 EBUILD highlight-2.6.10.ebuild 1674 RMD160 d57166623446d70a13c786600d1cb50bd0187d3a SHA1 8a727d915b1ce20d7c02c7be0b81aeff1388b89b SHA256 d61a571b745605c9d79a52620b92a05e8f1f0440b8f50ec5aa64270ff4b5826d
-MISC ChangeLog 3060 RMD160 9ca70e4ca15273f7c73f593502b597a5894a1291 SHA1 8005f67ec64ee227ffd055eb9b9829b0ed0c5352 SHA256 79e6360aa95be05b4590521e62775d3b2c507bc9b946e732b3474fbc5a462e06
+EBUILD highlight-2.6.12.ebuild 1590 RMD160 d7c7976addd5ae15666f0b83f67b9cc942b0ff3e SHA1 2b9b76cd5929fd6402c8729082a5c6068714fb32 SHA256 d01a56a69ac47c11e1c932bd5505e79dfe4f74525b1e6df7efed056c73751702
+MISC ChangeLog 3256 RMD160 b995d631703f1117813bb0d789de9d972de97d33 SHA1 a480019e0474bfa60e203d3a5c5d2fcb0c484785 SHA256 bfd6445aa3a93ef342addcc8aadf16e490ae92697525e59099baf32abc1ecf40
 MISC metadata.xml 178 RMD160 7a7e1fa5fc747be92ff6d87c7e43c2909bf3c5d7 SHA1 6f35e3eb98d5da19aa894ba2478aabb2698037c6 SHA256 d0798c610b068ab759a9ecfa6fedaa735750e718c770783216ad5ea76e0020ba
