@@ -1,6 +1,12 @@
 # ChangeLog for app-text/highlight
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.23 2008/06/19 17:04:43 ken69267 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.24 2009/02/15 17:58:51 patrick Exp $
+
+*highlight-2.6.12 (15 Feb 2009)
+
+  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> +highlight-2.6.12.ebuild:
+  Bump to 2.6.12. Fixes #232587. Two patches dropped as they were accepted
+  upstream.
 
   19 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> highlight-2.6.10.ebuild:
   amd64 stable, bug #226657
